--- a/MecProj/Views/OrdemServicos/Delete.cshtml
+++ b/MecProj/Views/OrdemServicos/Delete.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<h3>Deseja Realmente Deletar esta Ordem ?</h3>
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<hr />
 <div>
-    <h4>OrdemServico</h4>
+<h4>Ordem Serviço <b>@Model.Service</b> <i class="far fa-hand-point-left"></i></h4>
+<h6>Cliente <b>@Model.Cliente</b></h6>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -54,10 +55,10 @@
             @Html.DisplayFor(model => model.Situacao)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a class="btn btn-info" asp-action="Index">Voltar a lista</a>
     </form>
 </div>
