--- a/MecProj/Views/OrdemServicos/Details.cshtml
+++ b/MecProj/Views/OrdemServicos/Details.cshtml
@@ -4,10 +4,11 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
+<h1><b>Ordem de Serviço</b></h1>
+<h6>Detalhes</h6>
 <div>
-    <h4>OrdemServico</h4>
+    <h4>Cliente <b>@Model.Cliente</b></h4>
+
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -55,6 +56,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a class="btn btn-info" asp-action="Index">Voltar a lista</a>
 </div>
