--- a/MecProj/Views/OrdemServicos/Edit.cshtml
+++ b/MecProj/Views/OrdemServicos/Edit.cshtml
@@ -14,8 +14,10 @@
 </header>
 
 
-<h4>OrdemServico</h4>
+@*<h4>Editar <b>OrdemServico</b></h4>*@
+<h3>Editar Ordem de Serviço -> <b>@Model.Service</b><br />Cliente <b>@Model.Cliente</b></h3>
 <hr />
+
 
 <div id="formulario">
 
@@ -34,12 +36,9 @@
 
 
 
-        <div class="form-group col-md-8">
-            <label class="control-label"></label>
-            <select class="form-control  basic">
-                <option value="">Selecionar</option>
-                <option value="@Html.DisplayNameFor(model => model.Descricao)" selected>@Html.DisplayNameFor(model => model.Descricao)</option>
-            </select>
+        <div id="consulta" class="form-group col-md-8">
+            <label asp-for="Cliente" class="control-label"></label>
+            <input asp-for="Cliente" class="form-control" placeholder="Nome Cliente" />
             <span asp-validation-for="Cliente" class="text-danger"></span>
         </div>
 
@@ -69,14 +68,14 @@
             <label asp-for="Situacao" class="control-label"></label>
             @*<input asp-for="Situacao" class="form-control" />*@
             <select asp-for="Situacao" class="form-control">
-                <option value="" selected>Selecionar</option>
-                <option value="pendente">Pendente</option>
-                <option value="concluido">Concluído</option>
+                <option value="@Model.Situacao" hidden selected>@Model.Situacao</option>
+                <option value="Concluído">Concluído</option>
+                <option value="Pendente">Pendente</option>
             </select>
             <span asp-validation-for="Situacao" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input type="submit" value="Emitir" class="btn btn-primary" /> ||
+            <input type="submit" value="Salvar" class="btn btn-primary" /> ||
             <a class="btn btn-info" asp-action="Index">Voltar a lista</a>
         </div>
 
