--- a/MecProj/Views/Shared/Menu.cshtml
+++ b/MecProj/Views/Shared/Menu.cshtml
@@ -126,7 +126,8 @@
                     </div>
                 </a>
                 <ul class="collapse submenu list-unstyled dropdown-content" id="cadastros" data-parent="#accordionExample">
-                    <li><a href="Clientes/Index">Clientes</a></li>
+                    <li><a href="~/Clientes/Index">Pessoa Física</a></li>
+                    <li><a href="~/Empresas/Index">Pessoa Jurídica</a></li>
                     <li><a href="Fornecedors/Index">Fornecedores</a></li>
                     @*<li><a href="OrdemServicos/Index">Serviços</a></li>*@
                 </ul>
