--- a/MecProj/Views/Clientes/Delete.cshtml
+++ b/MecProj/Views/Clientes/Delete.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cpf_Cnpj)
+            @Html.DisplayNameFor(model => model.Cpf)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cpf_Cnpj)
+            @Html.DisplayFor(model => model.Cpf)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
@@ -76,38 +76,8 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Complemento)
         </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Placa)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Placa)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Marca)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Marca)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Modelo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Modelo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ano)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ano)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Observacao)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Observacao)
-        </dd>*@
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Deletar" class="btn btn-danger" /> |
