--- a/MecProj/Views/Empresas/Edit.cshtml
+++ b/MecProj/Views/Empresas/Edit.cshtml
@@ -1,18 +1,8 @@
-﻿@model MecProj.Models.Cliente
+﻿@model MecProj.Models.Empresa
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
-<header>
-    <style>
-        #formulario {
-            margin-right: 50%;
-            margin-top: 2%;
-            width: 800px;
-        }
-    </style>
-</header>
-
 
 
 
@@ -170,29 +160,36 @@
     }
 </script>
 
+<header>
+    <style>
+        #formulario {
+            margin-right: 50%;
+            margin-top: 2%;
+            width: 800px;
+        }
+    </style>
+</header>
 
 
-<h1>Cadastro de Cliente</h1>
+
+<h1>Editar <b>@Model.Razão_Social</b></h1>
 
 
-<hr />
 <div id="formulario">
-
-    <form class="form-group" asp-action="Create">
-
-
+    <form asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
 
         <div class="form-row form-content">
             <div class="form-group col-md-7">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" placeholder="Nome Completo" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                <label asp-for="Razão_Social" class="control-label"></label>
+                <input asp-for="Razão_Social" class="form-control" placeholder="Nome Empresa" />
+                <span asp-validation-for="Razão_Social" class="text-danger"></span>
             </div>
             <div class="form-group col-md-5">
-                <label asp-for="Cpf" class="control-label"></label>
-                <input asp-for="Cpf" class="form-control cpf-mask" placeholder="Ex.: 000.000.000-00" onKeyPress="MascaraGenerica(this, 'CPF')"/>
-                <span asp-validation-for="Cpf" class="text-danger"></span>
+                <label asp-for="Cnpj" class="control-label"></label>
+                <input asp-for="Cnpj" class="form-control cpf-mask" placeholder="Ex.: 000.000.000-00" onKeyPress="MascaraGenerica(this, 'CNPJ')" />
+                <span asp-validation-for="Cnpj" class="text-danger"></span>
             </div>
             <div class="form-group col-xl-7">
                 <label asp-for="Email" class="control-label"></label>
@@ -200,18 +197,18 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group col-xl-5">
-                <label asp-for="TelefoneCelular" class="control-label"></label>
-                <input asp-for="TelefoneCelular" class="form-control" placeholder="(00) 00000-0000" onKeyPress="MascaraGenerica(this, 'TELEFONE')" />
-                <span asp-validation-for="TelefoneCelular" class="text-danger"></span>
+                <label asp-for="Telefone_Celular" class="control-label"></label>
+                <input asp-for="Telefone_Celular" class="form-control" placeholder="(00) 00000-0000" onKeyPress="MascaraGenerica(this, 'TELEFONE')" />
+                <span asp-validation-for="Telefone_Celular" class="text-danger"></span>
             </div>
             <div class="form-group col-xl-6">
-                <label asp-for="TelefoneRecado" class="control-label"></label>
-                <input asp-for="TelefoneRecado" class="form-control" placeholder="Fixo ou Celular" onKeyPress="MascaraGenerica(this, 'TELEFONE')" />
-                <span asp-validation-for="TelefoneRecado" class="text-danger"></span>
+                <label asp-for="Telefone_Recado" class="control-label"></label>
+                <input asp-for="Telefone_Recado" class="form-control" placeholder="Fixo ou Celular" onKeyPress="MascaraGenerica(this, 'TELEFONE')" />
+                <span asp-validation-for="Telefone_Recado" class="text-danger"></span>
             </div>
             <div class="form-group col-xl-6">
                 <label asp-for="Estado" class="control-label"></label>
-                <select asp-for="Estado" id="estado" class="form-control" onchange="buscaCidades(this.value)">
+                <select asp-for="Estado" id="estado" class="form-control">
                     <option hidden selected>SELECIONAR</option>
                     <option value="SC">Santa Catarina</option>
                     <option value="PR">Paraná</option>
@@ -220,9 +217,7 @@
             </div>
             <div class="form-group col-xl-6">
                 <label asp-for="Cidade" class="control-label"></label>
-                <select class="form-control" asp-for="Cidade" id="cidade" onchange="buscaBairro(this.value)">
-                    <option value="" hidden>SELECIONAR</option>
-                </select>
+                <input asp-for="Cidade" class="form-control" placeholder="Cidade" />
                 <span asp-validation-for="Cidade" class="text-danger"></span>
             </div>
             <div class="form-group col-xl-6">
@@ -246,16 +241,17 @@
                 <span asp-validation-for="Complemento" class="text-danger"></span>
             </div>
         </div>
+
         <div class="form-group">
-            <input type="submit" value="Cadastrar" class="btn btn-primary" /> ||
+            <input type="submit" value="Salvar" class="btn btn-primary" /> ||
             <a class="btn btn-info" asp-action="Index">Voltar a lista</a>
         </div>
-
     </form>
 
 
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
+@*@section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }*@
