--- a/MecProj/Views/OrdemServicos/Create.cshtml
+++ b/MecProj/Views/OrdemServicos/Create.cshtml
@@ -24,37 +24,51 @@
 <div id="formulario">
     <form class="form-group" asp-action="Create">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-row">
-            <div id="consulta" class="form-group col-md-8">
+
+        <div class="form-row form-content">
+            <div class="form-group col-md-9">
                 <label asp-for="Cliente" class="control-label"></label>
                 <input asp-for="Cliente" class="form-control" placeholder="Nome Cliente" />
                 <span asp-validation-for="Cliente" class="text-danger"></span>
             </div>
 
 
-            <div class="form-group col-md-8">
+            @*<div class="form-group col-md-9">
+                <label class="control-label">CNPJ ou CPF</label>
+                <input class="form-control" placeholder="Numero documento" />
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-group col-md-9">
+                <label class="control-label">Telefone</label>
+                <input class="form-control" placeholder="Numero celular cliente" />
+                <span class="text-danger"></span>
+            </div>*@
+
+
+
+
+            <div class="form-group col-md-9">
                 <label asp-for="Service" class="control-label"></label>
                 <input asp-for="Service" class="form-control" placeholder="Serviço Realizado" />
                 <span asp-validation-for="Service" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-8">
+            <div class="form-group col-md-9">
                 <label asp-for="Descricao" class="control-label"></label>
                 <input asp-for="Descricao" class="form-control" placeholder="Descrição do Serviço" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-8">
+            <div class="form-group col-md-9">
                 <label asp-for="Pecas" class="control-label"></label>
-                @*<input asp-for="Pecas" class="form-control" placeholder="Peças Novas" />*@
                 <textarea asp-for="Pecas" class="form-control" placeholder="Informa Peças e Informações...">
         </textarea>
                 <span asp-validation-for="Pecas" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-8">
+            <div class="form-group col-md-9">
                 <label asp-for="Entrada" class="control-label"></label>
                 <input asp-for="Entrada" class="form-control" />
                 <span asp-validation-for="Entrada" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-8">
+            <div class="form-group col-md-9">
                 <label asp-for="Situacao" class="control-label"></label>
                 <select asp-for="Situacao" class="form-control">
                     <option value="Pendente" selected>Pendente</option>
@@ -62,8 +76,8 @@
                 </select>
                 <span asp-validation-for="Situacao" class="text-danger"></span>
             </div>
-
         </div>
+        <br />
         <div class="form-group">
             <input type="submit" value="Emitir" class="btn btn-primary" /> ||
             <a class="btn btn-info" asp-action="Index">Voltar a lista</a>
