--- a/MecProj/Views/Fornecedors/Index.cshtml
+++ b/MecProj/Views/Fornecedors/Index.cshtml
@@ -56,7 +56,7 @@
 
 <div id="nav">
     <form class="form-inline">
-        <a asp-action="Create" class="btn btn-dark">Novo Cliente</a>
+        <a asp-action="Create" class="btn btn-dark">Novo Fornecedor</a>
         <div id="consulta" class="form-inline">
             <input type="text" class="w-100 form-control product-search br-30 mr-sm-2" name="consulta" id="txt_consulta" placeholder="Consultar" onkeyup="myFunction()">
         </div>
@@ -90,28 +90,28 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CNPJ)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Observacao)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data_Cadastro)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id"> <i class="far fa-edit"></i> Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id"> <i class="fas fa-search"></i> Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id"> <i class="far fa-trash-alt"></i> Deletar</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CNPJ)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Observacao)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Data_Cadastro)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm"> <i class="far fa-edit"></i> Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm"> <i class="fas fa-search"></i> Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"> <i class="far fa-trash-alt"></i> Deletar</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
