--- a/MecProj/Views/OrdemServicoes/Index.cshtml
+++ b/MecProj/Views/OrdemServicoes/Index.cshtml
@@ -3,15 +3,72 @@
 @{
     ViewData["Title"] = "Index";
 }
+<header>
+    <style>
+        #tabela {
+            margin-right: 10%;
+        }
 
-<h1>Index</h1>
+        #consulta {
+            padding: 10px;
+        }
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+        #tabela td {
+            text-align: center;
+        }
+
+        #tabela th {
+            text-align: center;
+        }
+
+        #nav {
+            padding: 7px;
+        }
+    </style>
+</header>
+
+
+<script>
+    function myFunction() {
+        var input, filter, table, tr, td, cell, i, j;
+        input = document.getElementById("txt_consulta");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("tabela");
+        tr = table.getElementsByTagName("tr");
+
+        for (i = 1; i < tr.length; i++) {
+            tr[i].style.display = "none";
+            td = tr[i].getElementsByTagName("td");
+
+            for (var j = 0; j < td.length; j++) {
+                cell = tr[i].getElementsByTagName("td")[j];
+                if (cell) {
+                    if (cell.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                        break;
+                    }
+                }
+            }
+        }
+    }
+</script>
+
+<div id="nav">
+    <form class="form-inline">
+        <a asp-action="Create" class="btn btn-dark">Emitir Nova Ordem</a>
+        <div id="consulta" class="form-inline">
+            <input type="text" class="w-100 form-control product-search br-30 mr-sm-2" name="consulta" id="txt_consulta" placeholder="Consultar" onkeyup="myFunction()">
+        </div>
+    </form>
+</div>
+
+<h5 class="">Ordem de Serviço</h5>
+<table class="table table-hover table-dark mb-4" id="tabela">
     <thead>
         <tr>
+            <th>
+                #
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Cliente)
             </th>
@@ -19,47 +76,39 @@
                 @Html.DisplayNameFor(model => model.Service)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descricao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pecas)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Entrada)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Situacao)
             </th>
-            <th></th>
+            <th>AÇÃO</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cliente)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Service)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pecas)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Entrada)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Situacao)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cliente)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Service)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Entrada)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Situacao)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm"> <i class="far fa-edit"></i> Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm"> <i class="fas fa-search"></i> Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"> <i class="far fa-trash-alt"></i> Deletar</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
