--- a/MecProj/Views/Clientes/Create.cshtml
+++ b/MecProj/Views/Clientes/Create.cshtml
@@ -13,10 +13,6 @@
     </style>
 </header>
 
-
-
-
-
 <script>
     var json_cidades = {
         "estados": [
@@ -172,17 +168,11 @@
 
 
 
-<h1>Cadastro de Cliente</h1>
-
-
+<h1>Cadastro de Pessoa Física</h1>
 <hr />
 <div id="formulario">
-
     <form class="form-group" asp-action="Create">
-
-
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
         <div class="form-row form-content">
             <div class="form-group col-md-7">
                 <label asp-for="Nome" class="control-label"></label>
@@ -191,7 +181,7 @@
             </div>
             <div class="form-group col-md-5">
                 <label asp-for="Cpf" class="control-label"></label>
-                <input asp-for="Cpf" class="form-control cpf-mask" placeholder="Ex.: 000.000.000-00" onKeyPress="MascaraGenerica(this, 'CPF')"/>
+                <input asp-for="Cpf" class="form-control cpf-mask" placeholder="Ex.: 000.000.000-00" onKeyPress="MascaraGenerica(this, 'CPF')" />
                 <span asp-validation-for="Cpf" class="text-danger"></span>
             </div>
             <div class="form-group col-xl-7">
