--- a/MecProj/Views/Empresas/Index.cshtml
+++ b/MecProj/Views/Empresas/Index.cshtml
@@ -59,7 +59,7 @@
         </div>
     </form>
 </div>
-    <h5 class="">Pessoa Jurídica</h5>
+<h5 class="">Pessoa Jurídica</h5>
 <table class="table table-hover table-dark mb-4" id="tabela">
     <thead>
         <tr>
@@ -84,28 +84,28 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Razão_Social)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cnpj)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Telefone_Celular)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id"> <i class="far fa-edit"></i> Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id"> <i class="fas fa-search"></i> Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id"> <i class="far fa-trash-alt"></i> Deletar</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Razão_Social)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cnpj)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telefone_Celular)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm"> <i class="far fa-edit"></i> Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm"> <i class="fas fa-search"></i> Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"> <i class="far fa-trash-alt"></i> Deletar</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
