--- a/MecProj/Views/OrdemServicoes/Edit.cshtml
+++ b/MecProj/Views/OrdemServicoes/Edit.cshtml
@@ -4,55 +4,67 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>OrdemServico</h4>
+<h1>Editar Ordem</h1>
+<h4>Cliente <b>@Model.Cliente</b></h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+<div id="formulario">
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
+        <div class="form-row form-content">
+            <div class="form-group col-md-8">
                 <label asp-for="Cliente" class="control-label"></label>
                 <input asp-for="Cliente" class="form-control" />
+                @*@foreach (var item in MecProj.Controllers.ClientesController.GetClientes())
+                    {
+                        <select class="form-control">
+                            <option value="" hidden selected>Selecionar</option>
+                            <option value="@item.Nome">@item.Nome</option>
+                            <option value="teste">teste</option>
+                        </select>
+                    }*@
+
                 <span asp-validation-for="Cliente" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="Service" class="control-label"></label>
                 <input asp-for="Service" class="form-control" />
                 <span asp-validation-for="Service" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="Descricao" class="control-label"></label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="Pecas" class="control-label"></label>
-                <input asp-for="Pecas" class="form-control" />
+                @*<input asp-for="Pecas" class="form-control" />*@
+                <textarea class="form-control" asp-for="Pecas"></textarea>
                 <span asp-validation-for="Pecas" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="Entrada" class="control-label"></label>
                 <input asp-for="Entrada" class="form-control" />
                 <span asp-validation-for="Entrada" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="Situacao" class="control-label"></label>
-                <input asp-for="Situacao" class="form-control" />
+                <select asp-for="Situacao" class="form-control">
+                    <option value="Pendente" selected>Pendente</option>
+                    <option value="Não Aprovado">Não Aprovado</option>
+                    <option value="Concluído">Concluído</option>
+                </select>
                 <span asp-validation-for="Situacao" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Cadastrar" class="btn btn-primary" /> ||
+            <a class="btn btn-info" asp-action="Index">Voltar a lista</a>
+        </div>
+    </form>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
