--- a/MecProj/Views/OrdemServicoes/Details.cshtml
+++ b/MecProj/Views/OrdemServicoes/Details.cshtml
@@ -17,7 +17,7 @@
 <h1>Detalhes</h1>
 
 <div id="form">
-    <h4>Ordem de Serviço</h4>
+    <h4>Cliente <b><i>@Model.Cliente</i></b></h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -27,37 +27,37 @@
             @Html.DisplayFor(model => model.Cliente)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CPF_CNPJ)
+            @*@Html.DisplayNameFor(model => model.CPF_CNPJ)*@CPF/CNPJ
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CPF_CNPJ)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefone_Celular)
+            @*@Html.DisplayNameFor(model => model.Telefone_Celular)*@Telefone Celular
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Telefone_Celular)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Marca_Veiculo)
+            @*@Html.DisplayNameFor(model => model.Marca_Veiculo)*@Marca Veículo
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Marca_Veiculo)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Modelo_Veiculo)
+            @*@Html.DisplayNameFor(model => model.Modelo_Veiculo)*@Modelo Veículo
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Modelo_Veiculo)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ano_Veiculo)
+            @*@Html.DisplayNameFor(model => model.Ano_Veiculo)*@Ano Veículo
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Ano_Veiculo)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Obs_Veiculo)
+            @*@Html.DisplayNameFor(model => model.Obs_Veiculo)*@Obs Veículo
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Obs_Veiculo)
@@ -69,31 +69,31 @@
             @Html.DisplayFor(model => model.Entrada)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Situacao)
+            @*@Html.DisplayNameFor(model => model.Situacao)*@Situação
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Situacao)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Service)
+            @*@Html.DisplayNameFor(model => model.Service)*@Serviço
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Service)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
+            @*@Html.DisplayNameFor(model => model.Descricao)*@Descrição
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Pecas)
+            @*@Html.DisplayNameFor(model => model.Pecas)*@Peças
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Pecas)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Valor_Total)
+            @*@Html.DisplayNameFor(model => model.Valor_Total)*@Valor Total
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Valor_Total)
