--- a/MecProj/Views/OrdemServicoes/Delete.cshtml
+++ b/MecProj/Views/OrdemServicoes/Delete.cshtml
@@ -16,19 +16,19 @@
             @Html.DisplayFor(model => model.Cliente)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Service)
+            @*@Html.DisplayNameFor(model => model.Service)*@Serviço
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Service)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
+            @*@Html.DisplayNameFor(model => model.Descricao)*@Descrição
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Pecas)
+            @*@Html.DisplayNameFor(model => model.Pecas)*@Peças
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Pecas)
@@ -40,7 +40,7 @@
             @Html.DisplayFor(model => model.Entrada)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Situacao)
+            @*@Html.DisplayNameFor(model => model.Situacao)*@Situação
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Situacao)
